--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,10 @@ unstructured==0.9.2
 tiktoken==0.4.0
 faiss-cpu==1.7.4
 libmagic==1.0
-python-magic
-python-magic-bin
+python-magic==0.4.27
 google-generativeai
 langchain-google-genai
-selenium
 langchain-community
 langchain-experimental
+selenium
 streamlit-extras
