--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-langchain==0.0.284
+langchain==0.3.25
 python-dotenv==1.0.0
-streamlit==1.22.0
+streamlit==1.45.0
 unstructured==0.9.2
 tiktoken==0.4.0
 faiss-cpu==1.7.4
 libmagic==1.0
-python-magic==0.4.27
-google-generativeai
-langchain-google-genai
-langchain-community
-langchain-experimental
-selenium
+python-magic
+python-magic-bin==0.4.14
+google-generativeai==0.4.1
+langchain-google-genai==2.1.4
+selenium==4.31.0
+langchain-community==0.3.23
+langchain-experimental==0.0.25
 streamlit-extras
