--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ tiktoken==0.4.0
 faiss-cpu==1.7.4
 libmagic==1.0
 python-magic
-python-magic-bin==0.4.14
+python-magic-bin
 google-generativeai==0.4.1
 langchain-google-genai==2.1.4
 selenium==4.31.0
